fix(UI): fixed visiblity of action's dropdown

--- a/src/app/fate-ui/fate-ui.component.scss
+++ b/src/app/fate-ui/fate-ui.component.scss
@@ -11,7 +11,7 @@ $font-size: 14px;
   color: #333;
   user-select: none;
   position: relative;
-  overflow: hidden;
+  overflow: visible;
 }
 .fate-ui-separator {
   display: inline-block;
